# progetto-driverless

./: CMakeLists.txt  README.md
include/: KinematicModel.h
src/: KinematicModel.cpp  main.cpp
